--- a/SampleProject/webSpeechAPIPrototype.html
+++ b/SampleProject/webSpeechAPIPrototype.html
@@ -42,37 +42,56 @@
             message.textContent = 'You spoke: ' + command;
             var degree;
             Math.eval = function (command) {
-                if (command.startsWith(("sine ", "cosecant inverse "))) {
-                    console.log("dstwrcewgawg");
-                    if(command.startsWith("sine ")){
+                if (command.startsWith("sine ") || command.startsWith("cosecant inverse ")) {
+                    if (command.startsWith("sine ")) {
                         degree = command.substring(5, command.length);
-                    }else{
+                    } else {
                         degree = command.substring(16, command.length);
                     }
-                    console.log(degree);
-                    text.value = Math.sin(degree * Math.PI / 180);
-                } else if (command.startsWith("cosine ")) {
-                    console.log("hellooooo")
-                    var degree = command.substring(7, command.length);
-                    console.log(degree);
-                    text.value = Math.cos(degree * Math.PI / 180);
-                } else if (command.startsWith("tangent ")) {
-                    var degree = command.substring(7, command.length);
-                    console.log(degree);
-                    text.value = Math.tan(degree * Math.PI / 180);
-                } else if (command.startsWith("secant ")) {
-                    var degree = command.substring(7, command.length);
-                    console.log(degree);
-                    text.value = Math.sec(degree * Math.PI / 180);
-                } else if (command.startsWith("cosecant ")) {
-                    var degree = command.substring(9, command.length);
-                    console.log(degree);
-                    text.value = Math.asin(degree * Math.PI / 180);
-                } else if (command.startsWith("cotangent ")) {
-                    var degree = command.substring(9, command.length);
-                    console.log(degree);
-                    text.value = Math.cot(degree * Math.PI / 180);
-                }else {
+                    console.log(degree)
+                    text.value = Math.sin(degree * Math.PI / 180).toFixed(5);
+                } else if (command.startsWith("cosine") || command.startsWith("secant inverse ")) {
+                    if (command.startsWith("cosine ")) {
+                        degree = command.substring(7, command.length);
+                    } else {
+                        degree = command.substring(15, command.length);
+                    }
+                    text.value = Math.cos(degree * Math.PI / 180).toFixed(5);
+                } else if (command.startsWith("tangent ") || command.startsWith("cotangent inverse ")) {
+                    if (command.startsWith("tangent ")) {
+                        degree = command.substring(7, command.length);
+                    } else {
+                        degree = command.substring(18, command.length);
+                    }
+                    text.value = Math.tan(degree * Math.PI / 180).toFixed(5);
+                } else if (command.startsWith("secant ") || command.startsWith("cosine inverse ")) {
+                    if (command.startsWith("secant ")) {
+                        degree = command.substring(7, command.length);
+                    } else {
+                        degree = command.substring(14, command.length);
+                    }
+                    console.log(degree)
+                    text.value = Math.asin(degree * Math.PI / 180).toFixed(5);
+                } else if (command.startsWith("cosecant ") || command.startsWith("sine inverse ")) {
+                    if (command.startsWith("cosecant ")) {
+                        degree = command.substring(9, command.length);
+                    } else {
+                        degree = command.substring(12, command.length);
+                    }
+                    text.value = Math.acos(degree * Math.PI / 180).toFixed(5);
+                } else if (command.startsWith("cotangent ") || command.startsWith("tangent inverse ")) {
+                    if (command.startsWith("cotangent ")) {
+                        degree = command.substring(10, command.length);
+                    } else {
+                        degree = command.substring(16, command.length);
+                    }
+                    console.log(degree)
+                    text.value = Math.atan(degree).toFixed(5);
+                } else if (command.startsWith("log ")) {
+                    degree = command.substring(3, command.length);
+                    text.value = Math.log(degree).toFixed(5);
+                }
+                else {
                     for (var i = 0; i < command.length; i++) {
                         if (isNaN(command[i]) && !['+', '-', '/', '*', '%'].includes(command[i])) {
                             text.value = "";
@@ -84,38 +103,13 @@
                     }
                 }
             }
-            Math.eval(command)
+            Math.eval(command);
+            console.log("Hiiiii")
+            setTimeout(function () {
+                var toSpeak = new SpeechSynthesisUtterance(txtInput.value);
+                synth.speak(toSpeak);
+            }, 1000);
         };
-        // for (var i = 0; i < command.length; i++) {
-        //     if (isNaN(command[i]) && !['+', '-', '/', '*', '%'].includes(command[i])
-        //         && !command.includes('sine ') 
-        //         && !command.includes('cosine ') 
-        //         && !command.includes('tan ') 
-        //         && !['sine ', 'cosine ', 'tan '].includes(command)) {
-        //         text.value = "";
-        //         text.value = command;
-        //         return NaN;
-        // } else if (command.startsWith("sine ")) {
-        //     var degree = command.substring(5, command.length);
-        //     console.log(degree);
-        //     text.value = Math.sin(degree * Math.PI / 180);
-        // } else if (command.startsWith("cosine ")) {
-        //     console.log("hellooooo")
-        //     var degree = command.substring(9, command.length);
-        //     console.log(degree);
-        //     text.value = Math.cos(degree * Math.PI / 180);
-        // } else if (command.startsWith("tan ")) {
-        //     var degree = command.substring(4, command.length);
-        //     console.log(degree);
-        //     text.value = Math.tan(degree * Math.PI / 180);
-        // } else {
-        //     text.value = eval(command);
-        // }
-        // }
-
-
-        // Math.eval(command)
-        // };
 
         recognition.onspeechend = function () {
             recognition.stop();
@@ -138,11 +132,11 @@
         // document.querySelector('#btnSpeak').click();
         // var toSpeak = new SpeechSynthesisUtterance(txtInput.value);
 
-        setTimeout(function () {
-            console.log("Hiiiii")
-            var toSpeak = new SpeechSynthesisUtterance(txtInput.value);
-            synth.speak(toSpeak);
-        }, 8000);
+        // setTimeout(function () {
+        //     console.log("Hiiiii")
+        //     var toSpeak = new SpeechSynthesisUtterance(txtInput.value);
+        //     synth.speak(toSpeak);
+        // }, 8000);
 
 
 
