changed root conditions

--- a/SampleProject/webSpeechAPIPrototype.html
+++ b/SampleProject/webSpeechAPIPrototype.html
@@ -151,19 +151,32 @@
                         console.log(val[0])
                         switch (val[0]) {
                             case 'fourth':
+                            case '4th':
                                 root = 4;
                                 break;
                             case 'fifth':
+                            case '5th':
                                 root = 5;
                                 break;
                             case 'sixth':
+                            case '6th':
                                 root = 6;
                                 break;
                             case 'seventh':
+                            case '7th':
                                 root = 7;
                                 break;
                             case 'eigth':
+                            case '8th':
                                 root = 8;
+                                break;
+                            case 'ninth':
+                            case '9th':
+                                root = 9;
+                                break;
+                            case 'tenth':
+                            case '10th':
+                                root = 10;
                                 break;
                         }
                         console.log(root)
