--- a/SampleProject/webSpeechAPIPrototype.html
+++ b/SampleProject/webSpeechAPIPrototype.html
@@ -135,6 +135,24 @@
                 } else if (command.includes(" ^ ")) {
                     const val = command.split(" ");
                     text.value = Math.pow(val[0], val[2]).toFixed(5);
+                } else if (command.includes("pi")) {
+                    // pi function - 7 pi
+                    const val = command.split(" ");
+                    text.value = val[0] * Math.PI.toFixed(5);
+                } else if (command.endsWith("factorial")) {
+                    const val = command.split(" ");
+                    const val1 = val[0];
+                    var final;
+                    if (val1 == '0' && val1 == '1') {
+                        final = 1;
+                    } else if (val1 > 0) {
+                        let fact = 1;
+                        for (i = 1; i <= val1; i++) {
+                            fact *= i;
+                        }
+                        final = fact;
+                    }
+                    text.value = final;
                 } else if (command.includes("root")) {
                     console.log('inside root')
                     if (command.startsWith("square root of ")) {
@@ -184,12 +202,13 @@
                     }
                 } else {
                     for (var i = 0; i < command.length; i++) {
+                        //3 percent 4
                         if (isNaN(command[i]) && !['+', '-', '/', '*', '%'].includes(command[i])) {
                             text.value = "";
                             text.value = command;
                             return NaN;
                         } else {
-                            text.value = eval(command).toFixed(5);
+                            text.value = eval(command);
                         }
                     }
                 }
